# bitehack26_robotic

./: .gitignore  connect_speaker  detection_test.py  esp_comm.py  haar_test.py  main.py  pyproject.toml
code/: platformio.ini
code/src/: CameraMount.cpp  CameraMount.h  Dropper.cpp  Dropper.h  Eyes.cpp  Eyes.h  Face.cpp  Face.h  Mouth.cpp  Mouth.h  communication.h  main.cpp
comm/: esp_comm.py
esp_display/: platformio.ini
esp_display/src/: Eyes.h  Face.h  Mouth.h  main.cpp
esp_serva/esp_servo/src/: CameraMount.h  Dropper.h  main.cpp
python_vision/: detection_test.py  pi_vision_handler.py
tts/: __init__.py  asyncTTS.py  models.txt  tts.py
