[project]
name = "bitehack26"
version = "0.1.0"
description = ""
authors = [
    {name = "Marek",email = "marek.j.swakon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
