[project]
name = "bitehack26"
version = "0.1.0"
description = ""
authors = [
    {name = "Marek",email = "marek.j.swakon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hsemotion-onnx (>=0.3.1,<0.4.0)",
    "mediapipe (>=0.10.31,<0.11.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
